Added ADVI vs NUTS efficiency slide.

--- a/slides/vi/bm_vi.tex
+++ b/slides/vi/bm_vi.tex
@@ -2191,6 +2191,15 @@ So in the new space, the ELBO becomes
 	 	
 \end{frame}
 
+\begin{frame}{Inference can be substantially more efficient}
+\begin{center}
+\includegraphics[width=.7\textwidth]{images/NUTS_vs_ADVI} 
+	
+Results with a non-negative matrix factorization model applied to the Frey Faces dataset.
+\end{center}	
+
+\bottomtext{ \hfill Kucukelbir, A., Tran, D., Ranganath, R., Gelman, A., \& Blei, D. M. (2017). Automatic differentiation variational inference. The Journal of Machine Learning Research, 18(1), 430-474.}
+\end{frame}
 
 %%NOTES SLIDE 
 %\begin{frame}[standout]
