remove improper use of term "Bayesian model averaging" in VI deck

--- a/slides/vi/bm_vi.tex
+++ b/slides/vi/bm_vi.tex
@@ -1111,7 +1111,7 @@ The derivation uses variational calculus, and is nearly syntactically identical 
 
 \metroset{block=fill}
 \begin{block}{Why Bayes?}
-All the usual reasons -- exploit prior knowledge,  protect against overfitting via Bayesian model averaging, can use the evidence (or ELBO) for model selection, etc.
+All the usual reasons -- exploit prior knowledge,  protect against overfitting, can use the evidence (or ELBO) for model selection, etc.
 \end{block}
 \vfill
 \begin{block}{Why Variational Bayes?}
