Added missing 1.96 multiplier to the adjusted Wald interview in the "why Bayes" deck.

--- a/slides/why_bayes/bm_why_bayes.tex
+++ b/slides/why_bayes/bm_why_bayes.tex
@@ -310,7 +310,7 @@ People have suggested alternatives to avoid this type of behavior.  \pause
 The ``adjusted" Wald interval suggested by Agresti and Coull (1998) is given by
 
 \begin{align*}
-\widehat{\theta} & \pm \sqrt{\widehat{\theta} (1 - \widehat{\theta}) / n},  \quad \text{where} \\
+\widehat{\theta} & \pm 1.96 \sqrt{\widehat{\theta} (1 - \widehat{\theta}) / n},  \quad \text{where} \\
 \widehat{\theta}  &= \df{n}{n+4} \bar{y} + \df{4}{n+4} \df{1}{2}
 \end{align*}
 
